--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=s, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>curriculum vitae</title>
 </head>
 <body>
-    
+    <h1> Curriculum Vitae </h1>
+    <h2>Datos Personales </h2>
+    <p>Nombre completo: Mario Andres Vicencio Guerra</p>
+    <P>Rut: 19.978.476-5
+    <p>Fecha de nacimiento: 17/11/1998</p>
+    <p>Nacionalidad: Chilena</p>
+<p>Estado Civil: Soltero
+    <p>Direccion: Balmaceda 1611</p>
+    <p>Comuna: Iquique</p>
+    <p>Celular: 999999999
+    <p>Email: Mariojampr@gmail.com</p>
+    <h2>Formacion Academica</h2>
+    <p>2005-2010 Liceo Anibal Pinto Garmendia</p>
+    </p>
+    </P>
 </body>
 </html>
